syntax = "proto3";

package calculator;

option go_package = "github.com/wfabjanczuk/grpcGolang/calculator/proto";

message CalculatorRequest {
  int64 first_number = 1;
  int64 second_number = 2;
}

message CalculatorResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Calculate (CalculatorRequest) returns (CalculatorResponse);
}
